# SFG_Tools

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
Binder_P/: Binder_P.f90
Corr_to_spectrum/: Corr_to_spectrum.f90
Interface/: INTERFACE_UI.f90  Interface.f90
Interface_P/: Interface_P.f90
SFG_CORR/: SFG_CORR.f90
SSP_CORR_P/: SSP_CORR_P.f90
documentation/: README.md
documentation/programs_description/: Binder.md  Interface.md  SSP_CORR.md  corr_to_spectrum.md
documentation/user_guide/: files.md  getting_started.md  program_call_order.md  program_switches.md
lib/: FRAME_READERS.f90  GRO_READER.f90  SFG_MOL_STRUCT.f90  SFG_STRUCT.f90  SFG_UTILS.f90  TRR_READER.f90  UTILS_ERROR.f90  XYZ_READER.f90  bdata.f90  delete_SFG_FRAMES.f90  delete_SFG_TYPES.f90  switches.f90  utils_error_macros.h
